# NEMUS

./: CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  PACKAGE.md  PHOENIX_RESULTS.md  README.md  publish.bat  pyproject.toml  requirements.txt  setup.py
examples/: app1_sentinel.py  app2_drone.py  test_phoenix_protocol.py  user_demo.py
nemus/: __init__.py  biology.py  compile.py  core.py  data.py  diagnostics.py  interop.py  layers.py  learning.py  metrics.py  morphology.py  network.py  plasticity.py  receptors.py  silicon.py
nemus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
